Bug 94147 - Sometimes Xorg freezes after dpms off
Summary: Sometimes Xorg freezes after dpms off
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-14 12:50 UTC by Ismo Toijala
Modified: 2018-02-26 11:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
journal output (20.51 KB, text/plain)
2016-02-14 12:50 UTC, Ismo Toijala
no flags Details

Description Ismo Toijala 2016-02-14 12:50:43 UTC
Created attachment 121745 [details]
journal output

Sometimes Xorg freezes when the screens are turned off (from idle or manually with xset dpms off). The rest of the machine keeps working. The X server no longer accepts input and does not turn on the screens.

Hardware: 5650M + Intel 460M (muxed)
Software:
- Linux 4.3+ (not happening on 4.2.4 and older)
- xorg-server 1.18.1
- xf86-video-ati 7.6.1
- xf86-video-intel 2.99.917+519+g8229390

I could try to bisect but reproducing for every version would be very time consuming, since the bu does not happen every time.

I think it only happens if the screens are off for a long time (15 min+?).
Comment 1 Lukas Wunner 2018-02-26 11:44:32 UTC
Fixed in v4.16-rc3 with https://git.kernel.org/linus/15734feff2bd

Ismo, do you still own this machine?
If you boot with radeon.runpm=0, are you able to mux the panel between the GPUs using vga_switcheroo, i.e. does the following work?

echo IGD > /sys/kernel/debug/vgaswitcheroo/switch

echo DIS > /sys/kernel/debug/vgaswitcheroo/switch


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.